[package]
name = "qr_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.6"
qrcode = "0.14.1"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }

# Define two binaries
[[bin]]
name = "qr_cli"
path = "src/bin/cli.rs"

[[bin]]
name = "qr_web"
path = "src/bin/web.rs"